# xrad

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README
XRADBasic/: BooleanFunctionTypes.h  CMakeLists.txt  Containers.h  ContainersAlgebra.h  Core.h  DataArrayIO.h  FFT1D.h  FFT2D.h  FFTMD.h  FIRFilterKernelTypes.h  FIRFilterKernelTypes2D.h  LICENSE  LinearVectorTypes.h  Math.h  MathFunctionTypes.h  MathFunctionTypes2D.h  MathFunctionTypesMD.h  MathMatrixTypes.h  README  SampleTypes.h
XRADBasic/CMake/: CommonOptions.cmake  DetectThirdParty.cmake  Package.cmake  PackageSetup.cmake  StdLib.cmake  pre.h.in
XRADBasic/MSVC/: .gitignore  CopyMSVCRuntime-readme.txt  CopyMSVCRuntime-ucrt-d.txt  CopyMSVCRuntime-ucrt.txt  CopyMSVCRuntime-vc-d.txt  CopyMSVCRuntime-vc.txt  CopyMSVCRuntime.bat  CopyNatvis-files.txt  CopyNatvis.bat  CopyVLDRuntime-x64.txt  CopyVLDRuntime-x86.txt  CopyVLDRuntime.bat  Lib_PostBuild-2019.bat  Lib_PostBuild.bat  XRAD-2019-EHA.props  XRAD-2019-StdTarget.props  XRAD-StdTarget.props  XRADBasic-2019-common.props  XRADBasic-2019-debug.props  XRADBasic-2019-release.props  XRADBasic-2019.props  XRADBasic-2019.vcxproj  XRADBasic-2019.vcxproj.filters  XRADBasic-common.props  XRADBasic-debug.props  XRADBasic-release.props  XRADBasic.props  XRADBasic.user.props.sample  XRADBasic.vcxproj  pre.h
XRADBasic/Sources/Algebra/: AlgebraElement.h  AlgebraicAlgorithms2D.h  AlgebraicAlgorithmsDataArray.h  AlgebraicAlgorithmsFixedSizeArray.h  AlgebraicAlgorithmsMD.h  AlgebraicStructures1D.h  AlgebraicStructures2D.h  AlgebraicStructuresMD.h  BooleanAlgebraElement.h  ComplexAlgebraElement.h  ComplexFieldElement.h  FieldElement.dox  FieldElement.h  FieldTraits.h
XRADBasic/Sources/Containers/: ArrayAnalyzeFunctors.h  BasicArrayInteractions1D.h  BasicArrayInteractions2D.h  BasicArrayInteractionsMD.h  BooleanFunction.h  BooleanFunction2D.h  ColorContainer.h  ColorContainer.hh  ComplexArrayAnalyzeFunctors.h  ComplexContainer.h  ComplexContainer.hh  ComplexFunction.h  ComplexFunction.hh  ComplexFunction2D.h  ComplexFunction2D.hh  ComplexFunctionMD.h  ComplexFunctionMD.hh  ContainerCheck.h  ContainersBasic.cpp  ContainersBasic.h  DataArray.h  DataArray.hh  DataArray2D.h  DataArray2D.hh  DataArrayAnalyze.h  DataArrayAnalyze2D.h  DataArrayAnalyzeMD.h  DataArrayHistogram.h  DataArrayHistogram2D.h  DataArrayMD.h  DataArrayMD.hh  DataOwner.h  DataOwner.hh  FIRFilterKernel.h  FIRFilterKernel.hh  FIRFilterKernel2D.h  FIRFilterKernel2D.hh  (+38 more)
XRADBasic/Tests/: StringConverters_MS_Test.cpp  StringConverters_MS_Test.h  StringEncodeTest.cpp  StringEncodeTest.h  TestHelpers.h  readme.txt
XRADConsoleUI/: CMakeLists.txt  LICENSE  README
XRADConsoleUI/CMake/: Package.cmake  pre.h.in
XRADConsoleUI/MSVC/: XRADConsoleUI-2019-common.props  XRADConsoleUI-2019-debug.props  XRADConsoleUI-2019-internal.props  XRADConsoleUI-2019-release.props  XRADConsoleUI-2019.props  XRADConsoleUI-2019.vcxproj  XRADConsoleUI-2019.vcxproj.filters  XRADConsoleUI-debug.props  XRADConsoleUI-internal.props  XRADConsoleUI-release.props  XRADConsoleUI.props  XRADConsoleUI.vcxproj  pre.h
XRADDicom/: CMakeLists.txt  LICENSE  README  Utils.cpp  Utils.h  XRADDicom.h  XRADDicomTools.h  file_info.h  logger.h
XRADDicom/CMake/: DetectDCMTKConfiguration.cmake  GetDependencyLibraries.cmake  Package.cmake
XRADDicom/DCMTKAccess/: dcmtkCodec.cpp  dcmtkCodec.h  dcmtkElementsTools.h  dcmtkUtils.cpp  dcmtkUtils.h  pacsTools.cpp  pacsTools.h  pacsUtils.cpp
XRADDicom/DicomClasses/: DicomFilenameFilter.cpp  DicomFilters.h  DicomParameterCounter.h  DicomPredicates.cpp  DicomPredicates.h  DicomProcessors.h  DicomStorageAnalyze.cpp  DicomStorageAnalyze.h  Hierarchy.h  XRADDicomGeneral.cpp  XRADDicomGeneral.h
XRADDicom/MSVC/: XRADDicom-2019-common.props  XRADDicom-2019-debug.props  XRADDicom-2019-internal.props  XRADDicom-2019-release.props  XRADDicom-2019.vcxproj  XRADDicom-2019.vcxproj.filters  XRADDicom-CopyRuntime.bat  XRADDicom-internal.props  XRADDicom.vcxproj  XRADDicom.vcxproj.filters  pre.h
XRADDicomGUI/: CMakeLists.txt  LICENSE  README  SelectSeriesInteractive.h  XRADDicomGUI.h  dialogs.cpp
XRADDicomGUI/CMake/: Package.cmake  pre.h.in
XRADDicomGUI/DisplayFunctions/: DisplayAcquisitionXRay.cpp  DisplayProcessAcquisition.cpp  DisplayProcessAcquisition.h  DisplayTomogram_CTAcquisition.h  DisplayTomogram_GenericAcquisition.cpp  DisplayTomogram_MRAcquisition.cpp  DisplayTomogram_MRAcquisition.h  DisplayTomogram_MRAcquisitionSiemens.cpp  DisplayTomogram_MRAcquisitionSiemens.h
XRADDicomGUI/MSVC/: XRADDicomGUI-2019-common.props  XRADDicomGUI-2019-internal.props  XRADDicomGUI-2019.props  XRADDicomGUI-2019.vcxproj  XRADDicomGUI-2019.vcxproj.filters  XRADDicomGUI-common.props  XRADDicomGUI-internal.props  XRADDicomGUI.props  XRADDicomGUI.vcxproj  XRADDicomGUI.vcxproj.filters  pre.h
XRADDicomGUI/Sources/: SelectSeriesInteractive.cpp  SelectSeriesInteractive.h  dialogs.cpp  dialogs.h
XRADGUI/: CMakeLists.txt  LICENSE  README  XRAD.h
XRADGUI/CMake/: DetectQtConfiguration.cmake  DetectQwtConfiguration.cmake  Package.cmake  pre.h.in
XRADGUI/MSVC/: PaintWidget.cpp  PaintWidget.h  XRADGUI-2019-debug.props  XRADGUI-2019-internal.props  XRADGUI-2019-release.props  XRADGUI-2019.props  XRADGUI-2019.vcxproj  XRADGUI-2019.vcxproj.filters  XRADGUI-common.props  XRADGUI-debug.props  XRADGUI-internal.props  XRADGUI-release.props  XRADGUI.props  XRADGUI.vcxproj  XRADGUI.vcxproj.filters  XRADGUITestsLib-2019.vcxproj  XRADGUITestsLib.vcxproj  XRADGUITestsLib.vcxproj.filters  XRADGUITestsLib_pre.cpp  pre.h  std_moc.h
XRADGUI/Tests/: StringConverters_Qt_Test.cpp  StringConverters_Qt_Test.h
XRADSystem/: CFile.h  CMakeLists.txt  LICENSE  README  System.h  TextFile.h  fstream.h
XRADSystem/CMake/: Package.cmake
XRADSystem/MSVC/: XRADSystem-2019-debug.props  XRADSystem-2019-internal.props  XRADSystem-2019-release.props  XRADSystem-2019.props  XRADSystem-2019.vcxproj  XRADSystem-2019.vcxproj.filters  XRADSystem-debug.props  XRADSystem-internal.props  XRADSystem-release.props  XRADSystem.props  XRADSystem.vcxproj  XRADSystem.vcxproj.filters  pre.h
(+612 files in other folders)
