cmake_minimum_required (VERSION 3.8)

set(Project "XRAD")
project(${Project} LANGUAGES CXX)

option(XRAD_Build_XRADBasic "Build XRADBasic" ON)
option(XRAD_Build_XRADSystem "Build XRADSystem" ON)
option(XRAD_Build_XRADConsoleUI "Build XRADConsoleUI" ON)
option(XRAD_Build_XRADGUI "Build XRADGUI" ON)
option(XRAD_Build_XRADDicom "Build XRADDicom" ON)
option(XRAD_Build_XRADDicomGUI "Build XRADDicomGUI" ON)

function(xrad_add_package package_name)
	if(DEFINED XRAD_private_BuildDir)
		set(PackageBuildDir "${XRAD_private_BuildDir}/${package_name}")
	else()
		set(PackageBuildDir "${package_name}")
	endif()
	add_subdirectory("${package_name}" "${PackageBuildDir}")
endfunction()

if(XRAD_Build_XRADBasic)
	xrad_add_package("XRADBasic")
endif()
if(XRAD_Build_XRADSystem)
	xrad_add_package("XRADSystem")
endif()
if(XRAD_Build_XRADConsoleUI)
	xrad_add_package("XRADConsoleUI")
endif()
if(XRAD_Build_XRADGUI)
	xrad_add_package("XRADGUI")
endif()
if(XRAD_Build_XRADDicom)
	xrad_add_package("XRADDicom")
endif()
if(XRAD_Build_XRADDicomGUI)
	xrad_add_package("XRADDicomGUI")
endif()
